added new section latest news

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <ul>
 <!--          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>-->
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="#news" class="nav-link scrollto"><i class="bx bx-news"></i> <span>News</span></a></li>
           <li><a href="#education" class="nav-link scrollto"><i class="bx bx-book-open"></i> <span>Education</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-badge-check"></i> <span>Skills</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
@@ -98,6 +99,51 @@
 
       </div>
     </section><!-- End About Section -->
+
+
+    <!-- ======= Latest News Section ======= -->
+    <section id="news" class="news section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Latest News</h2>
+          <p>Stay updated with my latest activities, research, or publications.</p>
+        </div>
+
+        <div class="row">
+          <!-- News Item 1 -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <h4 class="title">Paper Accepted at IEE ITSC 2025</h4>
+              <p class="description">Published my paper on the data-driven modeling of the car-following behavior for Electric Vehicle at IEEE ITSC 2025, Gold coast, Australia.</p>
+            </div>
+          </div>
+
+          <!-- News Item 2 -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-megaphone"></i></div>
+              <h4 class="title">Presented Presented at IEEE UEMCON 2024</h4>
+              <p class="description">Published my paper on "Bangla SBERT" at IEEE UEMCON 2024 held in New York.</p>
+            </div>
+          </div>
+
+          <!-- News Item 3 -->
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-pen"></i></div>
+              <h4 class="title">Submitted paper at IEEE MLCAD 2025 Symposium</h4>
+              <p class="description">Worked on CPU Burst Forecasting and improve the latency using ML</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
+<!-- ======= End Latest News Section ======= -->
+
 <!--  Start Education Section -->
     <section id="education" class="education">
       <div class="container">
