--- a/index.html
+++ b/index.html
@@ -144,66 +144,92 @@
     </section>
 <!-- ======= End Latest News Section ======= -->
 
-<!--  Start Education Section -->
-    <section id="education" class="education">
-      <div class="container">
+    <!-- ======= Education Section ======= -->
+<section id="education" class="education">
+  <div class="container">
 
-        <div class="section-title">
-          <h2>Education</h2>
-<!--          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
-        </div>
+    <div class="section-title">
+      <h2>Education</h2>
+    </div>
 
-        <div class="row">
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title">Master Of Science in Information and Communication Technology</h4>
-            <div class="education-item">
-<!--              <h4>Bachelor of Science in ICT</h4>-->
-              <h5>2021 - 2022</h5>
-              <p><em>Comilla University, Comilla </em></p>
-              <p>CGPA : <b>3.54/4.00</b></p>
-            </div>
-          </div>
+    <!-- PhD -->
+    <div class="row">
+      <div class="icon-box" data-aos="fade-up">
+        <div class="icon"><i class="bi bi-mortarboard"></i></div>
+        <h4 class="title">PhD in Computer Engineering</h4>
+        <div class="education-item">
+          <h5>2025 - Present</h5>
+          <p><em>University of Alabama in Huntsville (UAH), USA</em></p>
+          <p>Research Focus: Reinforcement Learning, NLP, and Intelligent Transportation Systems</p>
         </div>
-        <div class="row">
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title">Bachelor Of Science in Information and Communication Technology</h4>
-            <div class="education-item">
-<!--              <h4>Bachelor of Science in ICT</h4>-->
-              <h5>2016 - 2020</h5>
-              <p><em>Comilla University, Comilla </em></p>
-              <p>CGPA : <b>3.70/4.00</b></p>
-            </div>
-          </div>
-        </div>
-<!--         <div class="row">
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-book"></i></div>
-            <h4 class="title">HIGHER SCHOOL CERTIFICATE</h4>
-            <div class="education-item">
-<!--              <h4>Bachelor of Science in ICT</h4>-->
-<!--               <h5>2012 - 2014</h5>
-              <p><em>Comilla Government College, Comilla</em></p>
-              <p>CGPA : <b>4.50/5.00</b></p>
-            </div>
-          </div>  -->
-<!--         </div> -->
-<!--         <div class="row">
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-book"></i></div>
-              <h4 class="title">SECONDARY SCHOOL CERTIFICATE</h4>
-              <div class="education-item">
-  <!--              <h4>Bachelor of Science in ICT</h4>-->
-<!--                 <h5>2006-2012</h5>
-                <p><em>Amratali C, Ali High School, Comilla</em></p>
-                <p>CGPA : <b>5.00/5.00</b></p>
-              </div>
-            </div> -->
-<!--           <div> -->
-        <!-- </div> -->
       </div>
-    </section><!-- End Services Section -->
+    </div>
+
+    <!-- MSc -->
+    <div class="row">
+      <div class="icon-box" data-aos="fade-up">
+        <div class="icon"><i class="bi bi-book"></i></div>
+        <h4 class="title">Master Of Science in Information and Communication Technology</h4>
+        <div class="education-item">
+          <h5>2021 - 2022</h5>
+          <p><em>Comilla University, Comilla </em></p>
+          <p>CGPA : <b>3.54/4.00</b></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- BSc -->
+    <div class="row">
+      <div class="icon-box" data-aos="fade-up">
+        <div class="icon"><i class="bi bi-book"></i></div>
+        <h4 class="title">Bachelor Of Science in Information and Communication Technology</h4>
+        <div class="education-item">
+          <h5>2016 - 2020</h5>
+          <p><em>Comilla University, Comilla </em></p>
+          <p>CGPA : <b>3.70/4.00</b></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+<!-- ======= End Education Section ======= -->
+
+<!--&lt;!&ndash;  Start Education Section &ndash;&gt;-->
+<!--    <section id="education" class="education">-->
+<!--      <div class="container">-->
+
+<!--        <div class="section-title">-->
+<!--          <h2>Education</h2>-->
+<!--&lt;!&ndash;          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>&ndash;&gt;-->
+<!--        </div>-->
+
+<!--        <div class="row">-->
+<!--          <div class="icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-book"></i></div>-->
+<!--            <h4 class="title">Master Of Science in Information and Communication Technology</h4>-->
+<!--            <div class="education-item">-->
+<!--&lt;!&ndash;              <h4>Bachelor of Science in ICT</h4>&ndash;&gt;-->
+<!--              <h5>2021 - 2022</h5>-->
+<!--              <p><em>Comilla University, Comilla </em></p>-->
+<!--              <p>CGPA : <b>3.54/4.00</b></p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--          <div class="icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-book"></i></div>-->
+<!--            <h4 class="title">Bachelor Of Science in Information and Communication Technology</h4>-->
+<!--            <div class="education-item">-->
+<!--&lt;!&ndash;              <h4>Bachelor of Science in ICT</h4>&ndash;&gt;-->
+<!--              <h5>2016 - 2020</h5>-->
+<!--              <p><em>Comilla University, Comilla </em></p>-->
+<!--              <p>CGPA : <b>3.70/4.00</b></p>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>&lt;!&ndash; End Services Section &ndash;&gt;-->
 
     <!-- ======= Facts Section ======= -->
     <!-- <section id="facts" class="facts">
