Modify the publication section

--- a/index.html
+++ b/index.html
@@ -645,34 +645,186 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Start Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container">
+<!--    <section id="services" class="services">-->
+<!--      <div class="container">-->
 
-        <div class="section-title">
-          <h2>Publications</h2>
-<!--          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
+<!--        <div class="section-title">-->
+<!--          <h2>Publications</h2>-->
+<!--&lt;!&ndash;          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>&ndash;&gt;-->
+<!--        </div>-->
+
+<!--        <div class="row">-->
+<!--          <div class="col-lg-12 mb-4" data-aos="fade-up">-->
+<!--          <div class="card border">-->
+<!--            <div class="card-body">-->
+<!--              <h5 class="card-title">-->
+<!--                <b>1.</b> Md Shihab Uddin, Md. Nazmus Shakib, Rahul Bhadani —-->
+<!--                <a href="#" class="text-primary fw-bold">"Modeling Electric Vehicle Car-Following Behavior: Classical vs Machine Learning Approach"</a>,-->
+<!--                accepted at <i>IEEE ITSC 2025.</i></a>-->
+<!--              </h5>-->
+
+<!--              <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract1" aria-expanded="false" aria-controls="abstract1">-->
+<!--                Abstract-->
+<!--              </button>-->
+
+<!--              <div class="collapse mt-3" id="abstract1">-->
+<!--                <div class="card card-body bg-light">-->
+<!--                  <h6><b>Abstract</b></h6>-->
+<!--                  <p>This comparative study evaluates classical and machine learning approaches for modeling electric vehicle car-following behavior, providing insights into the strengths and limitations of each methodology in capturing EV-specific driving dynamics.</p>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+
+
+<!--          <div class="icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
+<!--            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10754765">Bangla SBERT - Sentence Embedding Using multilingual knowledge Distillation</a></h4>-->
+<!--            <p class="description"><b>M. S. Uddin</b>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George, "Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation," 2024 IEEE 15th Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (UEMCON), Yorktown Heights, NY, USA, 2024, pp. 495-500, doi: 10.1109/UEMCON62879.2024.10754765.</p>-->
+<!--          </div>-->
+<!--          <div class="icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
+<!--            <h4 class="title"><a href="https://ieeexplore.ieee.org/document/10055173">Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA</a></h4>-->
+<!--            <p class="description">P. C. Paul, <b>Md. Shihab Uddin</b>, M. T. Ahmed, M. Moshiul Hoque and M. Rahman,     "Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA," 2022 25th International Conference on Computer and Information Technology (ICCIT), Cox's Bazar, Bangladesh, 2022, pp. 512-516, doi: 10.1109/ICCIT57492.2022.10055173.</p>-->
+<!--          </div>-->
+<!--          <div class="icon-box" data-aos="fade-up">-->
+<!--            <div class="icon"><i class="bi bi-briefcase"></i></div>-->
+<!--            <h4 class="title"><a href="https://dl.acm.org/doi/10.1145/3652037.3663943">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection</a></h4>-->
+<!--            <p class="description">Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M., Kamal, M., & Datta Gupta, K. (2024, June). A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection. In Proceedings of the 17th International Conference on PErvasive Technologies Related to Assistive Environments (pp. 375-381).</p>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--      </div>div-->
+<!--    </section>&lt;!&ndash; End Services Section &ndash;&gt;-->
+        <section id="services" class="services">
+        <div class="container">
+          <div class="section-title">
+            <h2>Publications</h2>
+          </div>
+
+          <div class="row">
+
+            <!-- Publication 1 -->
+            <div class="col-lg-12 mb-4" data-aos="fade-up">
+              <div class="card border">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <b>1.</b> <a href="#" class="text-primary fw-bold" target="_blank">
+                    Modeling Electric Vehicle Car-Following Behavior: Classical vs Machine Learning Approach
+                    </a>, accepted at <i>IEEE ITSC 2025</i>
+                  </h5>
+                  <p><b>Shihab Uddin</b>, Md. Nazmus Shakib, Rahul Bhadani.</p>
+                  <p><a href="#" target="_blank">DOI (pending or not yet public)</a></p>
+                  <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract0" aria-expanded="false" aria-controls="abstract0">
+                    Abstract 📄
+                  </button>
+                  <div class="collapse mt-3" id="abstract0">
+                    <div class="card card-body bg-light">
+                      <p>This comparative study evaluates classical and machine learning approaches for modeling electric vehicle car-following behavior, providing insights into the strengths and limitations of each methodology in capturing EV-specific driving dynamics.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Publication 2 -->
+            <div class="col-lg-12 mb-4" data-aos="fade-up">
+              <div class="card border">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <b>2.</b> <a href="https://ieeexplore.ieee.org/abstract/document/10754765" class="text-primary fw-bold" target="_blank">
+                    Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation
+                    </a>
+                  </h5>
+                  <p><b>M. S. Uddin</b>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George.</p>
+                  <p><a href="https://doi.org/10.1109/UEMCON62879.2024.10754765" target="_blank">DOI: 10.1109/UEMCON62879.2024.10754765</a></p>
+                  <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract1" aria-expanded="false" aria-controls="abstract1">
+                    Abstract 📄
+                  </button>
+                  <div class="collapse mt-3" id="abstract1">
+                    <div class="card card-body bg-light">
+                      <p>This paper presents Bangla SBERT, a distilled sentence embedding model optimized for the Bangla language. We apply multilingual knowledge distillation to enhance semantic understanding for low-resource NLP tasks.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Publication 3 -->
+            <div class="col-lg-12 mb-4" data-aos="fade-up">
+              <div class="card border">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <b>3.</b> <a href="https://ieeexplore.ieee.org/document/10055173" class="text-primary fw-bold" target="_blank">
+                    Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA
+                    </a>
+                  </h5>
+                  <p>P. C. Paul, <b>Md. Shihab Uddin</b>, M. T. Ahmed, M. Moshiul Hoque and M. Rahman.</p>
+                  <p><a href="https://doi.org/10.1109/ICCIT57492.2022.10055173" target="_blank">DOI: 10.1109/ICCIT57492.2022.10055173</a></p>
+                  <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract2" aria-expanded="false" aria-controls="abstract2">
+                    Abstract 📄
+                  </button>
+                  <div class="collapse mt-3" id="abstract2">
+                    <div class="card card-body bg-light">
+                      <p>This study explores topic modeling in Bangla using LDA and BERT-LDA, demonstrating the improved coherence and semantic accuracy of transformer-enhanced topic extraction from large-scale news corpora.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Publication 4 -->
+            <div class="col-lg-12 mb-4" data-aos="fade-up">
+              <div class="card border">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    <b>4.</b> <a href="https://dl.acm.org/doi/10.1145/3652037.3663943" class="text-primary fw-bold" target="_blank">
+                    A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection
+                    </a>
+                  </h5>
+                  <p>Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M. Kamal, & Datta Gupta, K.</p>
+                  <p><a href="https://doi.org/10.1145/3652037.3663943" target="_blank">DOI: 10.1145/3652037.3663943</a></p>
+                  <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract3" aria-expanded="false" aria-controls="abstract3">
+                    Abstract 📄
+                  </button>
+                  <div class="collapse mt-3" id="abstract3">
+                    <div class="card card-body bg-light">
+                      <p>This work investigates multi-modal emotion detection using both audio and text inputs. The proposed models reveal that domain-specific training significantly improves emotion classification across modalities.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Publication 5 -->
+          <div class="col-lg-12 mb-4" data-aos="fade-up">
+            <div class="card border">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <b>5.</b> <span class="text-primary fw-bold">Efficient CPU Burst Forecasting with Low-Latency Machine Learning Models</span>
+                  <small class="text-muted">(under review, IEEE MLCAD 2025)</small>
+                </h5>
+                <p><b>Md Nazmus Shakib</b>, Md Ashraf Hossain Ifty, <b>Md. Shihab Uddin</b>, Rahul Bhadani.</p>
+<!--                <p><i>Submission Number: 61</i></p>-->
+                <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract5" aria-expanded="false" aria-controls="abstract5">
+                  Abstract 📄
+                </button>
+                <div class="collapse mt-3" id="abstract5">
+                  <div class="card card-body bg-light">
+<!--                    <p><b>Keywords:</b> CPU Scheduling, Machine Learning, Burst Time Prediction, Exponential Averaging</p>-->
+                    <p>This paper investigates the use of ML models (KNN, DT, RF, MLP) for predicting CPU burst times based solely on submission-time attributes. These models are benchmarked against the exponential averaging (EA) method using the GWA-T-4 AuverGrid dataset. The study evaluates not only prediction accuracy but also inference latency for real-time scheduling. While KNN achieves high accuracy, the DT model shows the best trade-off between accuracy (MAE 3514.09, CC 0.84) and latency (0.0033 ms/sample). Confidence intervals and robustness testing confirm the feasibility of using ML for real-world CPU scheduling.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          </div>
         </div>
+    </section>
 
-        <div class="row">
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/abstract/document/10754765">Bangla SBERT - Sentence Embedding Using multilingual knowledge Distillation</a></h4>
-            <p class="description"><b>M. S. Uddin</b>, M. A. Haque, R. H. Rifat, M. Kamal, K. D. Gupta and R. George, "Bangla SBERT - Sentence Embedding Using Multilingual Knowledge Distillation," 2024 IEEE 15th Annual Ubiquitous Computing, Electronics & Mobile Communication Conference (UEMCON), Yorktown Heights, NY, USA, 2024, pp. 495-500, doi: 10.1109/UEMCON62879.2024.10754765.</p>
-          </div>
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://ieeexplore.ieee.org/document/10055173">Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA</a></h4>
-            <p class="description">P. C. Paul, <b>Md. Shihab Uddin</b>, M. T. Ahmed, M. Moshiul Hoque and M. Rahman,     "Semantic Topic Extraction from Bangla News Corpus Using LDA and BERT-LDA," 2022 25th International Conference on Computer and Information Technology (ICCIT), Cox's Bazar, Bangladesh, 2022, pp. 512-516, doi: 10.1109/ICCIT57492.2022.10055173.</p>
-          </div>
-          <div class="icon-box" data-aos="fade-up">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="https://dl.acm.org/doi/10.1145/3652037.3663943">A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection</a></h4>
-            <p class="description">Ariful Haque, M., George, R., Hossain Rifat, R., <b>Md. Shihab Uddin</b>, M., Kamal, M., & Datta Gupta, K. (2024, June). A Cross-Domain Exploration of Audio and Textual Data for Multi-Modal Emotion Detection. In Proceedings of the 17th International Conference on PErvasive Technologies Related to Assistive Environments (pp. 375-381).</p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
 
     <!-- ======= Start Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
