--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <div class="resume-item">
               <h4>Senior Software Engineer</h4><em>Silicon Orchard Ltd.</em>
               <br></br>
-              <h5>July 2023 - Present</h5>
+              <h5>July 2023 - January 2025</h5>
               <!-- <p><em>Mirpur. Dhaka </em></p> -->
               <ul>
                 <h6><b>Taxation System Optimization</b></h6>
