--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ We wish the best for himself always.
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Uttara,Dhaka, Bangladesh</p>
+                <p>Huntsville, Alabama, USA</p>
               </div>
 
               <div class="email">
@@ -883,11 +883,11 @@ We wish the best for himself always.
                 <p>shihabuddin.ict@gmail.com</p>
               </div>
 
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>8801690087078</p>
-              </div>
+<!--              <div class="phone">-->
+<!--                <i class="bi bi-phone"></i>-->
+<!--                <h4>Call:</h4>-->
+<!--                <p></p>-->
+<!--              </div>-->
 
 <!--              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
             </div>
