--- a/index.html
+++ b/index.html
@@ -785,6 +785,21 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
+             <div class="swiper-slide">
+              <div class="testimonial-item" data-aos="fade-up">
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I had the pleasure of working with Shihab Uddin and was consistently impressed by his expertise and professionalism. He has strong command over machine learning, excels in software requirements analysis, and demonstrates excellent leadership skills. Shihab is thoughtful, dependable, and brings a collaborative spirit to any team. He’s truly an asset in any tech-driven environment.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/mahfuz_bhai.jpeg" class="testimonial-img" alt="">
+                <h3>Mahfuzur Rahman</h3>
+                <h4>Lead Software Engineer</h4>
+              </div>
+            </div><!-- End testimonial item -->
+
+
+
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
