Added new publication

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-newspaper"></i></div>
+              <h4 class="title">Paper Accepted at TRB 2026</h4>
+              <p class="description">Published my paper on string stability analysis of stop and go wave using IDM and FollowerStopper Controller.</p>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
+            <div class="icon-box">
+              <div class="icon"><i class="bi bi-newspaper"></i></div>
               <h4 class="title">Paper Accepted at IEE ITSC 2025</h4>
               <p class="description">Published my paper on the data-driven modeling of the car-following behavior for Electric Vehicle at IEEE ITSC 2025, Gold coast, Australia.</p>
             </div>
@@ -124,7 +132,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-megaphone"></i></div>
-              <h4 class="title">Presented Presented at IEEE UEMCON 2024</h4>
+              <h4 class="title">Presented at IEEE UEMCON 2024</h4>
               <p class="description">Published my paper on "Bangla SBERT" at IEEE UEMCON 2024 held in New York.</p>
             </div>
           </div>
@@ -980,3 +988,4 @@ We wish the best for himself always.
 </body>
 
 </html>
+
