Update news title

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mb-4" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-newspaper"></i></div>
-              <h4 class="title">Paper Accepted at IEE ITSC 2025</h4>
+              <h4 class="title">Paper Accepted at IEEE ITSC 2025</h4>
               <p class="description">Published my paper on the data-driven modeling of the car-following behavior for Electric Vehicle at IEEE ITSC 2025, Gold coast, Australia.</p>
             </div>
           </div>
@@ -988,4 +988,5 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
