--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
             <!-- <h3>UI/UX Designer &amp; Web Developer.</h3> -->
             <!-- <h3>Senior Software Engineer</h3> -->
             <p class="fst-italic">
-             PhD researcher in Computer Engineering at UAH, working at the intersection of reinforcement learning, NLP, and intelligent transportation systems. I combine academic research and 4+ years of industry experience to build AI solutions for mobility, language, and real-world data.</p>
+             I am a Ph.D. student in Computer Engineering at the University of Alabama in Huntsville, where I conduct my doctoral research in the Autonomous and Adaptive Robotics & Control (AARC) Lab under the supervision of Dr. Rahul Bhadani. My research focuses on intelligent transportation systems, with particular emphasis on reinforcement learning–based congestion mitigation, car-following behavior modeling, traffic signal control, and the integration of large language models (LLMs) into transportation systems for enhanced decision-making and traffic efficiency.</p>
+            <p class="fst-italic">I completed both B.Sc. and M.Sc. degrees in Information and Communication Technology (ICT) from Comilla University, Bangladesh. During my graduate studies and prior research experience, I worked on problems spanning machine learning, natural language processing, and multimodal learning under the supervision of  Pintu Chandra Paul, Assistant Professor, Department of ICT. </p>
+            <p class="fst-italic"> Before starting my Ph.D., I worked as a Senior Software Engineer (AI), where I worked on large-scale machine learning pipelines, distributed deep learning, and LLM-based applications deployed in cloud environments. This industry background strongly informs my research, enabling me to bridge theoretical modeling with real-world, scalable systems.</p>
+            <p class="fst-italic">My broader research interests include reinforcement learning, connected and autonomous vehicles, traffic flow stability, large language models, and multimodal machine learning. Through my work, I aim to develop intelligent, data-driven transportation systems that improve mobility, safety, and sustainability.</p>
           </div>
         </div>
 
@@ -988,5 +991,6 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
