Update abstract of papers

--- a/index.html
+++ b/index.html
@@ -213,7 +213,31 @@
 
         <div class="row">
 
-          <!-- Publication 1 -->
+          <!-- Publication 6 -->
+
+          <div class="col-lg-12 mb-4" data-aos="fade-up">
+            <div class="card border">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <b>1.</b> <a href="#" class="text-primary fw-bold" target="_blank">
+                  	String Stability Analysis of Followerstopper for Mixed-Autonomy Vehicle Platoons
+                  </a>, accepted at <i>IEEE IV 2026</i>
+                </h5>
+                <p>Md. Nazmus Shakib,<b>Md Shihab Uddin</b>, Rahul Bhadani.</p>
+                <p><a href="#" target="_blank">DOI (pending or not yet public)</a></p>
+                <button class="btn btn-outline-primary btn-sm mt-2" type="button" data-bs-toggle="collapse" data-bs-target="#abstract0" aria-expanded="false" aria-controls="abstract0">
+                  Abstract 📄
+                </button>
+                <div class="collapse mt-3" id="abstract0">
+                  <div class="card card-body bg-light">
+                    <p>This study evaluates the string stability of the Followerstopper controller, a known wave-dampening control algorithm, in an eight-vehicle platoon scenario. An eight-vehicle platoon (one human-driven leader and seven automated followers) is simulated using a real-world leader speed profile, implemented in both a microscopic traffic simulator, SUMO, and a high-fidelity physics-engine simulator, CARLA. A time-domain evaluation framework is employed with metrics such as head-to-tail velocity amplification, relative speed differences, and spacing error. Results show that the Followerstopper nearly eliminates disturbance amplification: the head-to-tail amplification factor is approximately $0.994$ in both SUMO and CARLA, indicating slight attenuation of the leader’s perturbations. Once the Followerstopper is activated, large relative speed oscillations and spacing deviations are rapidly damped. These improvements are consistent across both simulators, which demonstrates the robust performance of Followerstopper under realistic vehicle dynamics. The proposed time-domain-based string stability assessment in realistic mixed-autonomy settings indicates that Followerstopper effectively stabilizes traffic flow by dissipating disturbances in platoon formation.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Publication 5 -->
           <div class="col-lg-12 mb-4" data-aos="fade-up">
             <div class="card border">
               <div class="card-body">
@@ -229,14 +253,14 @@
                 </button>
                 <div class="collapse mt-3" id="abstract0">
                   <div class="card card-body bg-light">
-                    <p>This comparative study evaluates classical and machine learning approaches for modeling electric vehicle car-following behavior, providing insights into the strengths and limitations of each methodology in capturing EV-specific driving dynamics.</p>
+                    <p>The increasing adoption of electric vehicles (EVs) necessitates an understanding of their driving behavior to enhance traffic safety and develop smart driving systems. This study compares classical and machine learning models for EV car following behavior. Classical models include the Intelligent Driver Model (IDM), Optimum Velocity Model (OVM), Optimal Velocity Relative Velocity (OVRV), and a simplified CACC model, while the machine learning approach employs a Random Forest Regressor. Using a real world dataset of an EV following an internal combustion engine (ICE) vehicle under varied driving conditions, we calibrated classical model parameters by minimizing the RMSE between predictions and real data. The Random Forest model predicts acceleration using spacing, speed, and gap type as inputs. Results demonstrate the Random Forest's superior accuracy, achieving RMSEs of 0.0046 (medium gap), 0.0016 (long gap), and 0.0025 (extra long gap). Among physics based models, CACC performed best, with an RMSE of 2.67 for long gaps. These findings highlight the machine learning model's performance across all scenarios. Such models are valuable for simulating EV behavior and analyzing mixed autonomy traffic dynamics in EV integrated environments.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Publication 2 -->
+          <!-- Publication 4 -->
           <div class="col-lg-12 mb-4" data-aos="fade-up">
             <div class="card border">
               <div class="card-body">
@@ -252,7 +276,7 @@
                 </button>
                 <div class="collapse mt-3" id="abstract1">
                   <div class="card card-body bg-light">
-                    <p>This paper presents Bangla SBERT, a distilled sentence embedding model optimized for the Bangla language. We apply multilingual knowledge distillation to enhance semantic understanding for low-resource NLP tasks.</p>
+                    <p>Word embeddings have revolutionized NLP by capturing the semantic associations between words effectively. However, sentence embeddings present notable benefits in the context of advanced language comprehension. While these developments have impacted high-resource languages like English, low-resource languages like Bangla have not benefited as much. The objective of this study is to address this disparity by creating sentence embeddings for the Bangla language, to improve information retrieval, sentiment analysis, content suggestion, etc. In this study, we developed BanglaÂ Sentence-BERT by fine-tuningÂ it on novelÂ datasets generated through machine translation and utilizing diverse open-source datasets. The approach we used consisted of utilizing the stsb-xlm-r-multilingual as the teacher model and XLM-RoBERTa (XLMR) as the student model for multilingual interpretation. We evaluated the efficacy of our suggested approach on multilingual sentence-BERT models and classical machine learning algorithms. The performance of our model was remarkable as it achieved an accuracy of 97% on real text classification. The results demonstrate the efficacy of our Bangla sentence transformer model in comprehending meaning and its potential for a range of Bangla natural language processing applications, such as text classification.</p>
                   </div>
                 </div>
               </div>
@@ -275,14 +299,14 @@
                 </button>
                 <div class="collapse mt-3" id="abstract2">
                   <div class="card card-body bg-light">
-                    <p>This study explores topic modeling in Bangla using LDA and BERT-LDA, demonstrating the improved coherence and semantic accuracy of transformer-enhanced topic extraction from large-scale news corpora.</p>
+                    <p>In order to infer topics from unstructured text data, topic modeling techniques is extensively employed in the field of Natural Language Processing. Latent Dirichlet Allocation (LDA), a popular technique in topic modeling, can be used for the automatic identification of topics from a vast sample of textual documents. The LDA-based topic models, however, may not always yield good outcomes on their own. One of the most efficient unsupervised machine learning methods, clustering, is often employed in applications like topic modeling and information extraction from unstructured textual data. In our study, a hybrid clustering based approach using Bidirectional Encoder Representations from Transformers (BERT) and LDA for large Bangla textual dataset has been thoroughly investigated. The BERT has done the contextual embedding with LDA. The experiments on this hybrid model are carried out to show the efficiency of clustering similar topics from a noble dataset of Bangla news articles. The outcomes of the experiments demonstrate that clustering with BERT-LDA model would aid in the inference of more coherent topics. The maximum coherence value of 0.63 has been found for our noble dataset using LDA and for BERT-LDA model, the value is 0.66.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Publication 4 -->
+          <!-- Publication 2 -->
           <div class="col-lg-12 mb-4" data-aos="fade-up">
             <div class="card border">
               <div class="card-body">
@@ -298,14 +322,14 @@
                 </button>
                 <div class="collapse mt-3" id="abstract3">
                   <div class="card card-body bg-light">
-                    <p>This work investigates multi-modal emotion detection using both audio and text inputs. The proposed models reveal that domain-specific training significantly improves emotion classification across modalities.</p>
+                    <p>The field of sentiment and emotion analysis is a challenging problem that has received research attention. The complexity of emotion and sentiment recognition draws from variability in expression, cultural and individual differences, context dependency, etc. This work takes an exploratory approach to the problem by performing an extensive classification of emotion using machine learning (ML) applied to textual and auditory data sources. We create a pipeline that facilitates the examination of textual and auditory inputs, resulting in more reliable emotional classification. The study uses multiple audio and textual datasets for the prediction of four distinct emotions. A four-layer Bi-LSTM model achieved 95% accuracy in emotion analysis from auditory clips. The training set contained 2391 samples, with Angry (20%), Fearful (18%), Happy (38%), and Neutral (24%). In the validation set of 713 samples, emotions were similarly distributed. The test set had 312 samples, with percentages of emotions comparable to the training set. We merged four datasets for textual analysis and utilized the "emotion english distilroberta base" model [5], achieving 90% accuracy on the test data. In the training set, emotions were distributed as follows: Angry (25%), Fearful (23%), Happy (23%), and Neutral (29%). The validation set comprised 305 samples, with similar distributions across emotions. The test set consisted of 712 samples, with percentages of emotions similar to the training set. We develop an application that combines both classifications to obtain a robust classification of arbitrary audio tracks.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Publication 5 -->
+          <!-- Publication 1 -->
         <div class="col-lg-12 mb-4" data-aos="fade-up">
           <div class="card border">
             <div class="card-body">
@@ -991,6 +1015,7 @@ We wish the best for himself always.
 </body>
 
 </html>
+
 
 
 
